@@ -54,17 +54,17 @@ public class ByteConversionUtil {
         } else if (o instanceof Byte) {
             return (Byte) o;
         } else if (o instanceof Number) {
-            return new Byte(((Number) o).byteValue());
+            return Byte.valueOf(((Number) o).byteValue());
         } else if (o instanceof String) {
             return toByte((String) o);
         } else if (o instanceof java.util.Date) {
             if (pattern != null) {
-                return new Byte(new SimpleDateFormat(pattern).format(o));
+                return Byte.valueOf(new SimpleDateFormat(pattern).format(o));
             }
-            return new Byte((byte) ((java.util.Date) o).getTime());
+            return Byte.valueOf((byte) ((java.util.Date) o).getTime());
         } else if (o instanceof Boolean) {
-            return ((Boolean) o).booleanValue() ? new Byte((byte) 1)
-                    : new Byte((byte) 0);
+            return ((Boolean) o).booleanValue() ? Byte.valueOf((byte) 1)
+                    : Byte.valueOf((byte) 0);
         } else {
             return toByte(o.toString());
         }
@@ -74,7 +74,7 @@ public class ByteConversionUtil {
         if (StringUtil.isEmpty(s)) {
             return null;
         }
-        return new Byte(DecimalFormatUtil.normalize(s));
+        return Byte.valueOf(DecimalFormatUtil.normalize(s));
     }
 
     /**
